@@ -62,19 +62,19 @@ class XoopsConfirm
     public function getFormXoopsConfirm()
     {
         //in order to be accessable from user and admin area this should be place in language common.php
-        \define('CO__WGGITHUB_DELETE_CONFIRM', 'Confirm delete');
-        \define('CO__WGGITHUB_DELETE_LABEL', 'Do you really want to delete:');
+        \define('CO_MODULEBUILDER_DELETE_CONFIRM', 'Confirm delete');
+        \define('CO_MODULEBUILDER_DELETE_LABEL', 'Do you really want to delete:');
 
         // Get Theme Form
         if ('' === $this->action) {
             $this->action = \Xmf\Request::getString('REQUEST_URI', '', 'SERVER');
         }
         if ('' === $this->title) {
-            $this->title = CO__WGGITHUB_DELETE_CONFIRM;
+            $this->title = CO_MODULEBUILDER_DELETE_CONFIRM;
         }
         if ('' === $this->label) {
 
-            $this->label = CO__WGGITHUB_DELETE_LABEL;
+            $this->label = CO_MODULEBUILDER_DELETE_LABEL;
         }
 
         \xoops_load('XoopsFormLoader');
